alterando fotos do carrossel e nome do projeto

--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@
         <a href="#" style="color: white; text-decoration: none;">
             <div class="logo">
                 <img id="idLogo" src="./assets/imgs/logoVolei.png" alt="logo" class="logo-img">
-                Voleibol
+                Hora do Vôlei
             </div>
         </a>
         <div class="links">
@@ -33,6 +33,8 @@
             <input type="radio" name="btn-radio" id="radio1">
             <input type="radio" name="btn-radio" id="radio2">
             <input type="radio" name="btn-radio" id="radio3">
+            <input type="radio" name="btn-radio" id="radio4">
+            <input type="radio" name="btn-radio" id="radio5">
 
             <div class="slide-box primeiro">
                 <img class="img" src="./assets/imgs/brasilFem1.jpg"> 
@@ -43,19 +45,25 @@
             </div>
 
             <div class="slide-box">
-                <img class="img" src="./assets/imgs/bola1.jpg">
+                <img class="img" src="./assets/imgs/brasilFemPodio.jpg">
+            </div>
+
+            <div class="slide-box">
+                <img class="img" src="./assets/imgs/brasilMascPodio.jpg">
             </div>
 
             <div class="nav-auto">
                 <div class="auto-btn1"></div>
                 <div class="auto-btn2"></div>
                 <div class="auto-btn3"></div>
+                <div class="auto-btn4"></div>
             </div>
 
             <div class="nav-manual">
                 <label for="radio1" class="manual-btn"></label>
                 <label for="radio2" class="manual-btn"></label>
                 <label for="radio3" class="manual-btn"></label>
+                <label for="radio4" class="manual-btn"></label>
             </div>
         </div>
     </section>
