adicionando botão no quiz

--- a/site/index.html
+++ b/site/index.html
@@ -146,6 +146,7 @@
                 </div>
             </div>
 
+            <br><br>
                 <h3 class="titulo">Quiz interativo</h3>
                 <div class="textoAniQuiz">
                     <div class="animacao">
@@ -154,7 +155,8 @@
                         </div>
                     </div>
                     <div class="textoQuiz">
-                        <p class="textinhoQuiz">O quiz do Hora do Vôlei é uma maneira divertida e desafiadora de testar seu conhecimento sobre o voleibol, e você pode jogá-lo quantas vezes quiser para aprimorar seus conhecimentos. Além disso, após concluir o quiz, você terá acesso a gráficos detalhados que mostram sua pontuação, tanto os acertos quanto os erros.</p>
+                        <p class="textinhoQuiz">O quiz do Hora do Vôlei é uma maneira divertida e desafiadora de testar seu conhecimento sobre o voleibol, e você pode jogá-lo quantas vezes quiser para aprimorar seus conhecimentos. Além disso, após concluir o quiz, você terá acesso a gráficos detalhados que mostram sua pontuação, tanto de acertos quanto de erros.</p>
+                        <button class="btnQuiz">Vamos lá</button>
                     </div>
                     <div class="animacao">
                         <div class="bolinha">
