--- a/site/index.html
+++ b/site/index.html
@@ -31,7 +31,10 @@
 
     <section class="slider">
         <div class="slider-content">
-            
+             <div style="z-index: 999; color: white;margin-left:10%; margin-top:30vh;height: 30vh; width: 30%; position: absolute; display: flex; align-items: center; justify-content: center; background-color: rgba(140, 140, 145, 0.562); border-radius:35px;">
+                <h1>texto texto</h1>
+             </div>
+
             <input type="radio" name="btn-radio" id="radio1">
             <input type="radio" name="btn-radio" id="radio2">
             <input type="radio" name="btn-radio" id="radio3">
@@ -39,7 +42,6 @@
 
             <div class="slide-box primeiro">
                 <img class="img" src="./assets/imgs/brasilFem1.jpg"> 
-                
             </div>
 
             <div class="slide-box">
