--- a/site/index.html
+++ b/site/index.html
@@ -31,8 +31,8 @@
 
     <section class="slider">
         <div class="slider-content">
-             <div style="z-index: 999; color: white;margin-left:10%; margin-top:30vh;height: 30vh; width: 30%; position: absolute; display: flex; align-items: center; justify-content: center; background-color: rgba(140, 140, 145, 0.562); border-radius:35px;">
-                <h1>texto texto</h1>
+             <div class="divTextoHeader">
+                <h1>Se você é um amante de vôlei, está no lugar certo!</h1>
              </div>
 
             <input type="radio" name="btn-radio" id="radio1">
