adicionando inicio da tela de login e linkagem dela com a landing page

--- a/site/index.html
+++ b/site/index.html
@@ -24,7 +24,7 @@
                 <li><a href="#" class="itensDaNav">Jogadores</a></li>
                 <li><a href="#" class="itensDaNav">Quiz</a></li>
                 <li><a href="#" class="itensDaNav">Sobre mim</a></li>
-                <li><a href="../Tela de Login/Login.html" class="itensDaNav">Login</a></li>
+                <li><a href="./login.html" class="itensDaNav">Login</a></li>
             </ul>
         </div>
     </nav>
