--- a/site/login.html
+++ b/site/login.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do vôlei | Login</title>
-    <link rel="stylesheet" href="styleLogin.css">
+    <link rel="stylesheet" href="./css/styleLogin.css">
 </head>
 <body>
-    <div class="DivimgFundo">
-        <img src="./assets/imgs/imgFundoForms.jpg" class="imgFundo">
+    <div class="boxContainer">
+        <h1>LOGIN</h1>
     </div>
 </body>
 </html>
