adicionando fotinhos dos jogadores e textinho, e tambem flip nos cards deles para girarem

--- a/site/login.html
+++ b/site/login.html
@@ -9,6 +9,14 @@
 <body>
     <div class="boxContainer">
         <h1>LOGIN</h1>
+
+        <div class="tudoLogin">
+                <input class="inputLogin" id="inputEmail" placeholder="E-mail"><br>
+                <input id="inputSenha" placeholder="Senha"><br>
+            
+            <button class="btnEntrar" onclick="entrar()">Entrar</button><br>
+            Ainda não tem uma conta?<a href="#">Cadastre-se</a>
+        </div>
     </div>
 </body>
 </html>
