linkando tela de login com cadastro

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -44,3 +44,13 @@
     </div>
 </body>
 </html>
+
+<script>
+    function cancelar(){
+        window.location.href ="login.html";
+    }
+
+    function cadastrar(){
+        window.location.href ="login.html";
+    }
+</script>
