--- a/public/login.html
+++ b/public/login.html
@@ -38,3 +38,9 @@
     </div>
 </body>
 </html>
+
+<script>
+    function entrar(){
+        window.location.href = "dashboard.html";
+    }
+</script>
