--- a/public/login.html
+++ b/public/login.html
@@ -18,6 +18,10 @@
         
 
         <div class="tudoLogin">
+            <div class="divSeta">
+                <img onclick="voltar()" class="imgSeta" src="./assets/imgs/icons/icons8-seta-esquerda-32.png">
+            </div>
+            
             <p class="nomeLogin">Login</p>
             <div class="inputsLogin">
                 <label class="labelForm">E-mail:</label>
@@ -42,5 +46,9 @@
 <script>
     function entrar(){
         window.location.href = "dashboard.html";
+    }
+
+    function voltar(){
+        window.location.href = "index.html";
     }
 </script>
