linkando uma opcao do menu

--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     
         <div class="links">
             <ul class="nav-itens">
-                <li><a href="#idProjeto" class="itensDaNav">Projeto</a></li>
-                <li><a href="#" class="itensDaNav">História</a></li>
+                <li><a href="#nav_manual" class="itensDaNav">Projeto</a></li>
+                <li><a href="#idHistoria" class="itensDaNav">História</a></li>
                 <li><a href="#" class="itensDaNav">Jogadores</a></li>
                 <li><a href="#" class="itensDaNav">Quiz</a></li>
                 <li><a href="#" class="itensDaNav">Sobre mim</a></li>
@@ -66,7 +66,7 @@
                 <div class="auto-btn4"></div>
             </div>
 
-            <div class="nav-manual">
+            <div id="nav_manual" class="nav-manual">
                 <label for="radio1" class="manual-btn"></label>
                 <label for="radio2" class="manual-btn"></label>
                 <label for="radio3" class="manual-btn"></label>
@@ -76,7 +76,7 @@
     </section>
 
     <div>
-        <div id="idProjeto">
+        <section id="idProjeto">
             <h3 class="titulo">O que é o Hora do Vôlei?</h3>
             <div class="imgTexto">
                 <img  class="imgPrj" src="./assets/imgs/imgProjeto.png">
@@ -87,7 +87,7 @@
                     <p class="textinhoProjeto">Também oferece uma oportunidade única de testar seu conhecimento esportivo, através de um quiz interativo sobre regras do esporte, conquistas da seleção e jogadores. </p>
                 </div>
             </div>
-        </div>
+        </section>
 
         <h3 class="titulo">Voleibol</h3>
         <div class="imgTexto">
@@ -101,7 +101,6 @@
             </div>
            <img  class="imgHist" src="./assets/imgs/imgBolaVolei.png">
         </div>
-
             <h3 class="titulo">Jogadores</h3>
             <div class="divTudoJogador">
             <div class="jogador-container">
