--- a/public/login.html
+++ b/public/login.html
@@ -45,7 +45,7 @@
 
 <script>
     function entrar(){
-        window.location.href = "dashboard.html";
+        window.location.href = "interno.html";
     }
 
     function voltar(){
