conexao do login com o bd

--- a/public/interno.html
+++ b/public/interno.html
@@ -27,6 +27,7 @@
 </html>
 
 <script>
+    var nick = JSON.parse(sessionStorage.NICKNAME);
     function quiz(){
         window.location.href = "quiz.html"
     }
