--- a/public/quiz.html
+++ b/public/quiz.html
@@ -13,32 +13,34 @@
     </div>
 
     <div class="container">
-        <div class="divPergunta1" id="divPergunta1" style="display:block">
+        <div class="divPergunta" id="divPergunta1" style="display:block">
             <p>1- Em que país foi criado o voleibol?</p>
-            <input type="radio" class="alternativaA" id="alternativaA1" onclick="aparecer1A()">Alemanha<br>
-            <input type="radio" class="alternativaB" id="alternativaB1" onclick="aparecer1B()">Brasil<br>
-            <input type="radio" class="alternativaC" id="alternativaC1" onclick="aparecer1C()">França<br>
-            <input type="radio" class="alternativaD" id="alternativaD1" onclick="aparecer1D()">Estados Unidos<br>
+            <input type="radio" class="alternativaA" id="alternativaA1" value="alternativaA1" name="prgunta1">Alemanha<br>
+            <input type="radio" class="alternativaB" id="alternativaB1" value="alternativaB1" name="prgunta1">Brasil<br>
+            <input type="radio" class="alternativaC" id="alternativaC1" value="alternativaC1" name="prgunta1">França<br>
+            <input type="radio" class="alternativaD" id="alternativaD1" value="alternativaD1" name="prgunta1">Estados Unidos<br>
             <button onclick="proxima2()">Próxima</button>
         </div>
 
-        <div class="divPergunta2" id="divPergunta2" style="display:none">
+        <div class="divPergunta" id="divPergunta2" style="display:none">
             <p>2- Qual o tamanho da quadra de vôlei?</p>
-            <input type="radio" class="alternativaA" id="alternativaA2">15x9<br>
-            <input type="radio" class="alternativaB" id="alternativaB2">18x9<br>
-            <input type="radio" class="alternativaC" id="alternativaC2">15x6<br>
-            <input type="radio" class="alternativaD" id="alternativaD2">18x6<br>
+            <input type="radio" class="alternativaA" id="alternativaA2" name="prgunta2">15x9<br>
+            <input type="radio" class="alternativaB" id="alternativaB2" value="alternativaB2" name="prgunta2">18x9<br>
+            <input type="radio" class="alternativaC" id="alternativaC2" name="prgunta2">15x6<br>
+            <input type="radio" class="alternativaD" id="alternativaD2" name="prgunta2">18x6<br>
             <button onclick="proxima3()">Próxima</button>
         </div>
 
-        <div class="divPergunta3" id="divPergunta3" style="display:none">
+        <div class="divPergunta" id="divPergunta3" style="display:none">
             <p>3- Quando é comemorado oficialmente o dia nacional do voleibol?</p>
-            <input type="radio" class="alternativaA" id="alternativaA3">30 agosto<br>
-            <input type="radio" class="alternativaB" id="alternativaB3">27 de agosto<br>
-            <input type="radio" class="alternativaC" id="alternativaC3">27 de junho<br>
-            <input type="radio" class="alternativaD" id="alternativaD3">30 de junho<br>
-            <button onclick="proxima4()">Próxima</button>
+            <input type="radio" class="alternativaA" id="alternativaA3" name="prgunta3">30 agosto<br>
+            <input type="radio" class="alternativaB" id="alternativaB3" name="prgunta3">27 de agosto<br>
+            <input type="radio" class="alternativaC" id="alternativaC3" value="alternativaC3" name="prgunta3">27 de junho<br>
+            <input type="radio" class="alternativaD" id="alternativaD3" name="prgunta3">30 de junho<br>
+            <button onclick="finalizar()">Finalizar</button>
+            <div id="exibir"></div>
         </div>
+
 
         <!-- <div class="divPergunta4" id="divPergunta4" style="display:none">
             <p>4- Em quantas Olimpíadas consecutivas a Seleção Masculina de Vôlei conquistou medalhas?</p>
@@ -62,14 +64,6 @@
 </html>
 
 <script>
-    function aparecer1A() {
-        if(alternativaA1.style.display == "block"){
-            alternativaA1.style.display = 'none'
-        }else{
-            alternativaA1.style.display = "block"
-        }
-    }
-
     function proxima2(){
         divPergunta1.style.display="none";
         divPergunta2.style.display="block";
@@ -85,15 +79,35 @@
         divPergunta4.style.display="block";
     }
 
-    /* function proxima5(){
-        divPergunta4.style.display="none";
-        divPergunta5.style.display="block";
+
+    function finalizar(){  
+        var listaAcertos = 0;
+        var listaErros = 0;
+
+        var respostasCorretas = [{
+            prgunta1: "alternativaD1", 
+            prgunta2: "alternativaB2",
+            prgunta3: "alternativaC3"
+            
+        }];
+
+            var radios = document.getElementsByName('prgunta1');
+            var valorSelecionado = "";
+            for (var i = 0; i < radios.length; i++) {
+                if (radios[i].checked) {
+                    valorSelecionado = radios[i].value;
+                    break;
+                }
+            }
+            /* alert("Valor selecionado: " + valorSelecionado); */
+
+            if(valorSelecionado == respostasCorretas){
+                listaAcertos++;
+                exibir.innerHTML = `Acertos: ${listaAcertos}`;
+            }else{
+                listaErros++;
+                exibir.innerHTML += `Erros: ${listaErros}`;
+            }
     }
-
-    function proxima6(){
-        divPergunta5.style.display="none";
-        divPergunta6.style.display="block";
-    } */
-
 
 </script>
