adicionando o quiz, que já possui uma parte funcionando

--- a/public/interno.html
+++ b/public/interno.html
@@ -14,8 +14,14 @@
 
     <div class="botoes">
         <div class="btnLeft">
-            <button onclick="mulheres()" class="btnMulheres">Mulheres</button>
-            
+            <div id="divBotaoIcon">
+                <button onclick="mulheres()" class="btnMulheres">
+                    <img src="./assets/imgs/icons/iconBrasil.png">
+                    <p class="fraseBtn">Mulheres</p>
+                </button>
+            </div>
+
+
             <div id="divBotaoIcon">
                 <button onclick="quiz()"class="btnQuiz">
                     <img src="./assets/imgs/icons/quiz (2).png">
@@ -25,7 +31,10 @@
         </div>
 
         <div class="btnRight">
-            <button onclick="homens()" class="btnHomens">Homens</button>
+            <button onclick="homens()" class="btnHomens">
+                <img src="./assets/imgs/icons/iconBrasil.png">
+                <p class="fraseBtn">Homens</p>
+            </button>
 
             <div id="divBotaoIcon">
                 <button onclick="sair()"class="btnSair">
