--- a/public/quiz.html
+++ b/public/quiz.html
@@ -13,101 +13,151 @@
     </div>
 
     <div class="container">
-        <div class="divPergunta" id="divPergunta1" style="display:block">
+        <h1 style="margin: auto; text-align: center; text-decoration: underline;">Quiz</h1>
+        <div class="divPergunta" id="divPergunta1">
             <p>1- Em que país foi criado o voleibol?</p>
-            <input type="radio" class="alternativaA" id="alternativaA1" value="alternativaA1" name="prgunta1">Alemanha<br>
-            <input type="radio" class="alternativaB" id="alternativaB1" value="alternativaB1" name="prgunta1">Brasil<br>
-            <input type="radio" class="alternativaC" id="alternativaC1" value="alternativaC1" name="prgunta1">França<br>
-            <input type="radio" class="alternativaD" id="alternativaD1" value="alternativaD1" name="prgunta1">Estados Unidos<br>
-            <button onclick="proxima2()">Próxima</button>
+            <div class="divRadios">
+                <input type="radio" class="alternativa1" id="alternativaA1" value="1" name="resposta1">Alemanha<br>
+                <input type="radio" class="alternativa1" id="alternativaB1" value="2" name="resposta1">Brasil<br>
+                <input type="radio" class="alternativa1" id="alternativaC1" value="3" name="resposta1">França<br>
+                <input type="radio" class="alternativa1" id="alternativaD1" value="4" name="resposta1">Estados Unidos<br>
+            </div>
         </div>
 
-        <div class="divPergunta" id="divPergunta2" style="display:none">
+        <div class="divPergunta" id="divPergunta2">
             <p>2- Qual o tamanho da quadra de vôlei?</p>
-            <input type="radio" class="alternativaA" id="alternativaA2" name="prgunta2">15x9<br>
-            <input type="radio" class="alternativaB" id="alternativaB2" value="alternativaB2" name="prgunta2">18x9<br>
-            <input type="radio" class="alternativaC" id="alternativaC2" name="prgunta2">15x6<br>
-            <input type="radio" class="alternativaD" id="alternativaD2" name="prgunta2">18x6<br>
-            <button onclick="proxima3()">Próxima</button>
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA2" value="5" name="resposta2">15x9<br>
+                <input type="radio" class="alternativa" id="alternativaB2" value="6" name="resposta2">18x9<br>
+                <input type="radio" class="alternativa" id="alternativaC2" value="7" name="resposta2">15x6<br>
+                <input type="radio" class="alternativa" id="alternativaD2" value="8" name="resposta2">18x6<br>
+            </div>
         </div>
 
-        <div class="divPergunta" id="divPergunta3" style="display:none">
+        <div class="divPergunta" id="divPergunta3">
             <p>3- Quando é comemorado oficialmente o dia nacional do voleibol?</p>
-            <input type="radio" class="alternativaA" id="alternativaA3" name="prgunta3">30 agosto<br>
-            <input type="radio" class="alternativaB" id="alternativaB3" name="prgunta3">27 de agosto<br>
-            <input type="radio" class="alternativaC" id="alternativaC3" value="alternativaC3" name="prgunta3">27 de junho<br>
-            <input type="radio" class="alternativaD" id="alternativaD3" name="prgunta3">30 de junho<br>
-            <button onclick="finalizar()">Finalizar</button>
-            <div id="exibir"></div>
-        </div>
-
-
-        <!-- <div class="divPergunta4" id="divPergunta4" style="display:none">
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA3" value="9" name="resposta3">30 agosto<br>
+                <input type="radio" class="alternativa" id="alternativaB3" value="10" name="resposta3">27 de agosto<br>
+                <input type="radio" class="alternativa" id="alternativaC3" value="11" name="resposta3">27 de junho<br>
+                <input type="radio" class="alternativa" id="alternativaD3" value="12" name="resposta3">30 de junho<br>
+            </div>
+            </div>
+        
+        <div class="divPergunta" id="divPergunta4">
             <p>4- Em quantas Olimpíadas consecutivas a Seleção Masculina de Vôlei conquistou medalhas?</p>
-            <input type="radio" class="alternativaA" id="alternativaA4">2<br>
-            <input type="radio" class="alternativaB" id="alternativaB4">3<br>
-            <input type="radio" class="alternativaC" id="alternativaC4">4<br>
-            <input type="radio" class="alternativaD" id="alternativaD4">5<br>
-            <button onclick="proxima5()">Próxima</button>
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA4" value="13" name="resposta4">2<br>
+                <input type="radio" class="alternativa" id="alternativaB4" value="14" name="resposta4">3<br>
+                <input type="radio" class="alternativa" id="alternativaC4" value="15" name="resposta4">4<br>
+                <input type="radio" class="alternativa" id="alternativaD4" value="16" name="resposta4">5<br>
+            </div>
         </div>
 
-        <div class="divPergunta5" id="divPergunta5" style="display:none">
+        <div class="divPergunta" id="divPergunta5">
             <p>5- Quem é a jogadora brasileira com mais participações em Olimpíadas pela Seleção Feminina?</p>
-            <input type="radio" class="alternativaA" id="alternativaA5">Fofão<br>
-            <input type="radio" class="alternativaB" id="alternativaB5">Fabiana Claudino<br>
-            <input type="radio" class="alternativaC" id="alternativaC5">Sheilla<br>
-            <input type="radio" class="alternativaD" id="alternativaD5">Jaqueline<br>
-            <button onclick="proxima6()">Próxima</button>
-        </div> -->
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA5" value="17" name="resposta3">Fofão<br>
+                <input type="radio" class="alternativa" id="alternativaB5" value="18" name="resposta3">Fabiana Claudino<br>
+                <input type="radio" class="alternativa" id="alternativaC5" value="19" name="resposta3">Sheilla<br>
+                <input type="radio" class="alternativa" id="alternativaD5" value="20" name="resposta3">Jaqueline<br>
+            </div>
+        </div>
+
+        <div class="divPergunta" id="divPergunta6">
+            <p>6- Qual o atual técnico do vôlei masculino?</p>
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA5" value="21" name="resposta3">Antônio Carlos Zigotto<br>
+                <input type="radio" class="alternativa" id="alternativaB5" value="22" name="resposta3">Luísa Machado Kopp<br>
+                <input type="radio" class="alternativa" id="alternativaC5" value="23" name="resposta3">Bernadinho<br>
+                <input type="radio" class="alternativa" id="alternativaD5" value="24" name="resposta3">Renan Dal Zotto<br>
+            </div>
+        </div>
+
+        <div class="divPergunta" id="divPergunta7">
+            <p>7- Qual o atual técnico do vôlei feminino?</p>
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA5" value="25" name="resposta3">Renan Dal Zotto<br>
+                <input type="radio" class="alternativa" id="alternativaB5" value="26" name="resposta3">Bernadinho<br>
+                <input type="radio" class="alternativa" id="alternativaC5" value="27" name="resposta3">José Roberto Guimarães<br>
+                <input type="radio" class="alternativa" id="alternativaD5" value="28" name="resposta3"> Jaqueline Silva<br>
+            </div>
+        </div>
+
+        <div class="divPergunta" id="divPergunta8">
+            <p>8- Quantas substituições uma equipe pode fazer durante um set em uma partida de vôlei?</p>
+            <div class="divRadios">
+                <input type="radio" class="alternativa" id="alternativaA5" value="29" name="resposta3">Duas<br>
+                <input type="radio" class="alternativa" id="alternativaB5" value="30" name="resposta3">Quatro<br>
+                <input type="radio" class="alternativa" id="alternativaC5" value="31" name="resposta3">Cinco<br>
+                <input type="radio" class="alternativa" id="alternativaD5" value="32" name="resposta3">Três<br>
+            </div>
+        </div>
+
+        <div class="divPergunta" id="divPergunta9">
+            <p>9- Se a bola toca na linha da quadra durante uma jogada, qual é a decisão do árbitro?</p>
+            <div class="divRadios">
+                <input type="radio" class="alternativaA" id="alternativaA5">A bola é considerada dentro<br>
+                <input type="radio" class="alternativaB" id="alternativaB5">Manda refazer a jogada<br>
+                <input type="radio" class="alternativaC" id="alternativaC5">Sempre considera fora<br>
+                <input type="radio" class="alternativaD" id="alternativaD5">Depende da opinião dos jogadores<br>
+            </div>
+        </div>
+
+        <div class="divPergunta" id="divPergunta10">
+            <p>10-  Em que ano a seleção brasileira de vôlei feminino conquistou seu primeiro título no Campeonato Mundial?</p>
+            <div class="divRadios">
+                <input type="radio" class="alternativaA" id="alternativaA5">1994<br>
+                <input type="radio" class="alternativaB" id="alternativaB5">1998<br>
+                <input type="radio" class="alternativaC" id="alternativaC5">2002<br>
+                <input type="radio" class="alternativaD" id="alternativaD5">2006<br>
+            </div>
+        </div>
+
+        <button onclick="finalizar()">Finalizar</button>
+            <div id="exibir"></div>
     </div>
 </body>
 </html>
 
 <script>
-    function proxima2(){
-        divPergunta1.style.display="none";
-        divPergunta2.style.display="block";
-    }
+    function finalizar() {
+    var opcoes1 = document.getElementsByName('resposta1');
+    var opcoes2 = document.getElementsByName('resposta2');
+    var opcoes3 = document.getElementsByName('resposta3');
 
-    function proxima3(){
-        divPergunta2.style.display="none";
-        divPergunta3.style.display="block";
-    }
+    var opcoes = [].concat(Array.from(opcoes1), Array.from(opcoes2), Array.from(opcoes3));
 
-    function proxima4(){
-        divPergunta3.style.display="none";
-        divPergunta4.style.display="block";
-    }
+    var listaAcertos = 0;
+    var listaErros = 0;
 
+    for (var i = 0; i < opcoes.length; i++) {
+        if (opcoes[i].checked) {
+            var alternativaSelecionada = parseInt(opcoes[i].value);
 
-    function finalizar(){  
-        var listaAcertos = 0;
-        var listaErros = 0;
-
-        var respostasCorretas = [{
-            prgunta1: "alternativaD1", 
-            prgunta2: "alternativaB2",
-            prgunta3: "alternativaC3"
-            
-        }];
-
-            var radios = document.getElementsByName('prgunta1');
-            var valorSelecionado = "";
-            for (var i = 0; i < radios.length; i++) {
-                if (radios[i].checked) {
-                    valorSelecionado = radios[i].value;
-                    break;
+            if (opcoes[i].name === 'resposta1') {
+                if (alternativaSelecionada === 4) {
+                    listaAcertos += 1;
+                } else {
+                    listaErros += 1;
+                }
+            } else if (opcoes[i].name === 'resposta2') {
+                if (alternativaSelecionada === 6) {
+                    listaAcertos += 1;
+                } else {
+                    listaErros += 1;
+                }
+            } else if (opcoes[i].name === 'resposta3') {
+                if (alternativaSelecionada === 11) {
+                    listaAcertos += 1;
+                } else {
+                    listaErros += 1;
                 }
             }
-            /* alert("Valor selecionado: " + valorSelecionado); */
 
-            if(valorSelecionado == respostasCorretas){
-                listaAcertos++;
-                exibir.innerHTML = `Acertos: ${listaAcertos}`;
-            }else{
-                listaErros++;
-                exibir.innerHTML += `Erros: ${listaErros}`;
-            }
+            exibir.innerHTML = `Acertos: ${listaAcertos}<br> Erros:${listaErros}`;
+        }
     }
+}
 
 </script>
