adicionando questionario funcionando certinho, e decorações

--- a/public/mulheres.html
+++ b/public/mulheres.html
@@ -12,6 +12,10 @@
         <p class="nomeProjeto">Hora do Vôlei</p>
     </div>
 
+    <div class="divSeta">
+        <img onclick="voltar()" class="imgSeta" src="./assets/imgs/icons/setaEsquerdaBranco.png">
+    </div>
+
     <div class="container">
         <div class="divTextinho">
             <p class="textinho">A seleção brasileira feminina de vôlei é conhecida por sua habilidade técnica, tática e espírito de equipe. Ao longo dos anos, as jogadoras brasileiras conquistaram vários títulos importantes e medalhas. Algumas das conquistas notáveis incluem medalhas de ouro nos Jogos Olímpicos, vitórias em Campeonatos Mundiais e sucessos em outras competições internacionais.</p>
@@ -24,3 +28,9 @@
 
 </body>
 </html>
+
+<script>
+    function voltar(){
+        window.location.href = "interno.html"
+    }
+</script>
