--- a/public/interno.html
+++ b/public/interno.html
@@ -56,4 +56,13 @@
     function mulheres(){
         window.location.href = "mulheres.html"
     }
+
+    function homens(){
+        window.location.href = "homens.html"
+    }
+
+    function sair(){
+        window.location.href = "index.html"
+    }
+
 </script>
