--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do vôlei | Cadastro</title>
+    <link rel="icon" href="./assets/imgs/logoVolei.png" type="image/png">
     <link rel="stylesheet" href="./css/styleCadastro.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">     
     <link rel="preconnect" href="https://fonts.gstatic.com/" crossorigin>     
