--- a/public/quiz.html
+++ b/public/quiz.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hora do Vôlei | Quiz</title>
+    <link rel="icon" href="./assets/imgs/logoVolei.png" type="image/png">
     <link rel="stylesheet" href="./css/styleQuiz.css">
 </head>
 <body>
