colocando placeholder nos forms

--- a/public/cadastro.html
+++ b/public/cadastro.html
@@ -28,18 +28,15 @@
                 
 
                 <label class="labelForm">Nome:</label>
-                <input class="inputNome" id="inputNome"><br>
+                <input class="inputNome" id="inputNome" placeholder="Ex. Gislaine"><br>
 
                 <label class="labelForm">E-mail:</label>
-                <input class="inputCad" id="inputEmail"><br>
+                <input class="inputCad" id="inputEmail" placeholder="Ex. gislaine@gmail.com"><br>
 
                 <label class="labelForm">Senha:</label>
-                <input class="inputSenha" id="inputSenha" type="password"><br>
+                <input class="inputSenha" id="inputSenha" type="password" placeholder="Sua senha"><br>
             </div>
-
-                <!-- <input class="inpMostrarSenha" type="checkbox" onclick="mostrarSenha()"> 
-                <span class="spanMostrarSenha">Mostrar senha</span>
-             -->
+            
             <div class="botao">
                 <button class="btnCancelar" onclick="cancelar()">Cancelar</button><br>
                 <button class="btnCadastrar" onclick="cadastrar()">Cadastrar</button><br>
