--- a/public/login.html
+++ b/public/login.html
@@ -26,10 +26,10 @@
             <p class="nomeLogin">Login</p>
             <div class="inputsLogin">
                 <label class="labelForm">E-mail:</label>
-                <input class="inputLogin" id="inputEmail"><br>
+                <input class="inputLogin" id="inputEmail" placeholder="Ex. gislaine@gmail.com"><br>
 
                 <label class="labelForm">Senha:</label>
-                <input class="inputSenha" id="inputSenha" type="password"><br>
+                <input class="inputSenha" id="inputSenha" type="password" placeholder="Sua senha"><br>
             </div>
 
                 <input class="inpMostrarSenha" type="checkbox" onclick="mostrarSenha()"> 
