--- a/public/mulheres.html
+++ b/public/mulheres.html
@@ -21,23 +21,13 @@
         <div class="divTextinho">
             <h1>Seleção Brasileira Feminina</h1>
             <p class="textinho">A seleção brasileira feminina de vôlei é conhecida por sua habilidade técnica, tática e espírito de equipe. Ao longo dos anos, as jogadoras brasileiras conquistaram vários títulos importantes e medalhas. Algumas das conquistas notáveis incluem medalhas de ouro nos Jogos Olímpicos, vitórias em Campeonatos Mundiais e sucessos em outras competições internacionais.
-                <br><br>Alguns dos melhores momentos da seleção brasileira feminina em jogos:</p>
+                <br><br>Alguns melhores momentos da seleção brasileira feminina em jogos:</p>
         </div>
  
         <div class="videos">
                 <iframe width="600" height="350" src="https://www.youtube.com/embed/0MA0d4NNIw0" frameborder="0" allowfullscreen></iframe>
 
                 <iframe width="600" height="350"  src="https://www.youtube.com/embed/S_DbM-ZsRlY" frameborder="0" allowfullscreen></iframe>
-        </div>
-
-        <div class="medalhas">
-            <p class="textinho">Seus Títulos</p>
-            <ul>
-                <li>12 títulos - Liga das Nações</li>
-                <li>22 títulos - Campeonato Sul-Americano</li>
-                <li>2 títulos - Copa dos campeões</li>
-            </ul>
-            <img src="./assets/imgs/icons/medalha.png">
         </div>
     </div>
 
