Colocando cor no scroll e mudando icone de sair

--- a/public/interno.html
+++ b/public/interno.html
@@ -39,7 +39,7 @@
 
             <div id="divBotaoIcon">
                 <button onclick="sair()"class="btnSair">
-                    <img src="./assets/imgs/icons/sair.png" style="height: 75px;">
+                    <img src="./assets/imgs/icons/sair.png">
                     <p class="fraseBtn">Sair</p>
                 </button>
             </div>
