alterando imagem do hora do vôlei

--- a/public/index.html
+++ b/public/index.html
@@ -79,7 +79,7 @@
         <section id="idProjeto">
             <h3 class="titulo">O que é o Hora do Vôlei?</h3>
             <div class="imgTexto">
-                <img  class="imgPrj" src="./assets/imgs/imgProjeto.png">
+                <img  class="imgPrj" src="./assets/imgs/imgHoraVoleiCerto.png">
             
                 <div class="divTextoPrj">
                     <p class="textinhoProjeto">O Hora do Vôlei é um projeto que oferece aos seus usuários uma experiência muito divertida e envolvente. Com detalhes sobre o esporte voleibol, com foco especial na seleção brasileira de vôlei, tanto a masculina quanto a feminina. </p>
