--- a/public/interno.html
+++ b/public/interno.html
@@ -13,7 +13,7 @@
             <img id="idLogo" src="./assets/imgs/logoVolei.png" alt="logo" class="logo-img">
             <p class="nomeProjeto">Hora do Vôlei</p>
         </div>
-        <div class="nicknameExibir" id="nickExibir"></div>
+        <div class="nicknameExibir" id="nickExibir">Bem vindo(a): </div>
     </div>
 
     <div class="botoes">
@@ -53,7 +53,7 @@
 
 <script>
     var nick = JSON.parse(sessionStorage.NICKNAME);
-    nickExibir.innerHTML = nick[0].nickname
+    nickExibir.innerHTML += nick[0].nickname + '!'
 
     function quiz(){
         window.location.href = "quiz.html"
