alterando banner na tela principal e nomes nos botoes internos

--- a/public/index.html
+++ b/public/index.html
@@ -35,7 +35,14 @@
     <section class="slider">
         <div class="slider-content">
              <div class="divTextoHeader">
-                <h1>Se você é um amante de vôlei, está no lugar certo!</h1>
+                <h1 style=" color:white; border-radius: 30px; margin-top: 40px;
+                text-shadow: 
+        -2px -2px 0 black,
+        2px -2px 0 black,
+        -2px 2px 0 black,
+        2px 2px 0 black; 
+    text-align: center;
+                ">Se você é um amante de vôlei, está no lugar certo!</h1>
              </div>
 
             <input type="radio" name="btn-radio" id="radio1">
