--- a/public/interno.html
+++ b/public/interno.html
@@ -21,7 +21,7 @@
             <div id="divBotaoIcon">
                 <button onclick="mulheres()" class="btnMulheres">
                     <img src="./assets/imgs/icons/iconBrasil.png">
-                    <p class="fraseBtn">Mulheres</p>
+                    <p class="fraseBtn">Seleção Feminina</p>
                 </button>
             </div>
 
@@ -37,7 +37,7 @@
         <div class="btnRight">
             <button onclick="homens()" class="btnHomens">
                 <img src="./assets/imgs/icons/iconBrasil.png">
-                <p class="fraseBtn">Homens</p>
+                <p class="fraseBtn">Seleção Masculina</p>
             </button>
 
             <div id="divBotaoIcon">
